--- a/База_рекламаций/reclamationhub/claims/templates/claims/blocks/prognosis_results.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/blocks/prognosis_results.html
@@ -197,8 +197,9 @@
 <div class="mt-3 mb-2 p-3 bg-light rounded">
     <div class="row align-items-center">
         <div class="col-md-8">
-            <strong>📊 Формула прогноза сумм претензий:</strong>
-            <code class="ms-2 fs-6">{{ prognosis_data.linked_model.regression.formula }}</code>
+            <strong>📊 Формула прогноза:</strong>
+            {% comment %} <code class="ms-2 fs-6">{{ prognosis_data.linked_model.regression.formula }}</code> {% endcomment %}
+            <strong><span class="text-success">{{ prognosis_data.linked_model.regression.formula }}</span></strong>
         </div>
     </div>
 </div>
