--- a/База_рекламаций/reclamationhub/claims/templates/claims/reclamation_to_claim.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/reclamation_to_claim.html
@@ -109,6 +109,9 @@
                             </ul>
                         </div>
 
+                        <!-- Горизонтальная линия -->
+                        <hr class="my-3">
+
                         <!-- ДВЕ КНОПКИ SUBMIT с formaction -->
                         <div class="d-flex gap-2">
                             <button type="submit"
