--- a/База_рекламаций/reclamationhub/claims/templates/claims/consumer_analysis.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/consumer_analysis.html
@@ -101,11 +101,11 @@
 
                         <!-- Информационная панель -->
                         <br>
-                        <div class="card border-secondary mb-4">
+                        <div class="card mb-4">
                             <div class="card-header">
                                 <h5>ℹ️ Что анализируется</h5>
                             </div>
-                            <div class="card-body">
+                            <div class="card-body alert alert-info mb-0">
                                 <ul class="mb-0">
                                     <li>Финансовые показатели по потребителям.</li>
                                     <li>Динамика по месяцам.</li>
@@ -113,6 +113,9 @@
                                 </ul>
                             </div>
                         </div>
+
+                        <!-- Горизонтальная линия -->
+                        <hr class="my-3">
 
                         <!-- Кнопки -->
                         <div class="d-flex gap-2 justify-content-end">
