--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -40,7 +40,7 @@
     <hr class="my-0">  <!-- Горизонтальная линия -->
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">© Dev by Vasilenok Igor - {% now "Y" %} Аналитическая система управления качества</span>
+            <span class="text-muted">© Dev by Vasilenok Igor - {% now "Y" %} Аналитическая система управления рекламациями</span>
         </div>
     </footer>
 
